src/surface/card/snapshots/synrepo__surface__card__decision__tests__decision_card_normal.snap
---
source: src/surface/card/decision.rs
assertion_line: 97
expression: rendered
---
{
  "title": "Use SQLite for Graph Storage",
  "status": "Accepted",
  "decision_body": "We store the canonical graph in SQLite because it provides transactional writes and zero-dependency deployment without a separate server process.",
  "governed_node_ids": []
}
