src/surface/card/snapshots/synrepo__surface__card__decision__tests__decision_card_tiny.snap
---
source: src/surface/card/decision.rs
assertion_line: 91
expression: rendered
---
{
  "title": "Use SQLite for Graph Storage",
  "governed_node_ids": []
}
